[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Dialogs/AboutDialog.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/icons/icon_64x64.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Roboto-Italic.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/graphics/splash_screen/orama_64x64.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/Roboto-Small.tres" type="DynamicFont" id=5]




[node name="AboutDialog" type="WindowDialog"]
margin_right = 512.0
margin_bottom = 288.0
rect_min_size = Vector2( 512, 288 )
window_title = "About Pixelorama"
resizable = true
script = ExtResource( 1 )

[node name="AboutUI" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 4.0
margin_right = -12.0
margin_bottom = -8.0
alignment = 1

[node name="IconsButtons" type="HBoxContainer" parent="AboutUI"]
margin_right = 488.0
margin_bottom = 64.0

[node name="PixeloramaLogo" type="TextureRect" parent="AboutUI/IconsButtons"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 2 )

[node name="SloganAndLinks" type="CenterContainer" parent="AboutUI/IconsButtons"]
margin_left = 68.0
margin_right = 420.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="AboutUI/IconsButtons/SloganAndLinks"]
margin_left = 64.0
margin_top = 12.0
margin_right = 288.0
margin_bottom = 51.0

[node name="Pixelorama" type="Label" parent="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer"]
margin_right = 224.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 3 )
text = "Pixelorama - Pixelate your dreams!"
align = 1

[node name="LinkButtons" type="HBoxContainer" parent="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer"]
margin_top = 19.0
margin_right = 224.0
margin_bottom = 39.0

[node name="Website" type="Button" parent="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer/LinkButtons"]
margin_right = 65.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Website"

[node name="GitHub" type="Button" parent="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer/LinkButtons"]
margin_left = 69.0
margin_right = 162.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "GitHub Repo"

[node name="Donate" type="Button" parent="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer/LinkButtons"]
margin_left = 166.0
margin_right = 224.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "Donate"

[node name="OramaLogo" type="TextureRect" parent="AboutUI/IconsButtons"]
margin_left = 424.0
margin_right = 488.0
margin_bottom = 64.0
texture = ExtResource( 4 )

[node name="HSeparator" type="HSeparator" parent="AboutUI"]
margin_top = 68.0
margin_right = 488.0
margin_bottom = 72.0

[node name="Credits" type="HSplitContainer" parent="AboutUI"]
margin_top = 76.0
margin_right = 488.0
margin_bottom = 233.0
size_flags_vertical = 3

[node name="Groups" type="Tree" parent="AboutUI/Credits"]
margin_right = 120.0
margin_bottom = 157.0
rect_min_size = Vector2( 120, 120 )
custom_constants/item_margin = -2
hide_root = true

[node name="Developers" type="VBoxContainer" parent="AboutUI/Credits"]
margin_left = 132.0
margin_right = 488.0
margin_bottom = 157.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AboutUI/Credits/Developers"]
margin_right = 356.0
margin_bottom = 14.0
text = "Development Team"

[node name="DeveloperTree" type="Tree" parent="AboutUI/Credits/Developers"]
margin_top = 18.0
margin_right = 356.0
margin_bottom = 157.0
size_flags_vertical = 3
custom_constants/item_margin = -2
custom_constants/button_margin = 2
hide_root = true

[node name="Contributors" type="VBoxContainer" parent="AboutUI/Credits"]
visible = false
margin_left = 254.0
margin_right = 496.0
margin_bottom = 126.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AboutUI/Credits/Contributors"]
margin_right = 242.0
margin_bottom = 14.0
text = "GitHub Contributors"

[node name="ContributorTree" type="Tree" parent="AboutUI/Credits/Contributors"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 126.0
size_flags_vertical = 3
custom_constants/item_margin = -2
hide_root = true

[node name="Donors" type="VBoxContainer" parent="AboutUI/Credits"]
visible = false
margin_left = 254.0
margin_right = 496.0
margin_bottom = 126.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AboutUI/Credits/Donors"]
margin_right = 242.0
margin_bottom = 14.0
text = "Donors"

[node name="DonorTree" type="Tree" parent="AboutUI/Credits/Donors"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 126.0
size_flags_vertical = 3
custom_constants/item_margin = -2
hide_root = true

[node name="Translators" type="VBoxContainer" parent="AboutUI/Credits"]
visible = false
margin_left = 254.0
margin_right = 496.0
margin_bottom = 126.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="AboutUI/Credits/Translators"]
margin_right = 242.0
margin_bottom = 14.0
text = "Translators"

[node name="TranslatorTree" type="Tree" parent="AboutUI/Credits/Translators"]
margin_top = 18.0
margin_right = 242.0
margin_bottom = 126.0
size_flags_vertical = 3
custom_constants/item_margin = -2
hide_root = true

[node name="HSeparator2" type="HSeparator" parent="AboutUI"]
margin_top = 237.0
margin_right = 488.0
margin_bottom = 241.0

[node name="MadeBy" type="Label" parent="AboutUI"]
margin_top = 245.0
margin_right = 488.0
margin_bottom = 259.0
text = "Developed by Orama Interactive"
align = 1

[node name="Copyright" type="Label" parent="AboutUI"]
margin_top = 263.0
margin_right = 488.0
margin_bottom = 276.0
custom_fonts/font = ExtResource( 5 )
text = "Copyright 2019-2020 Orama Interactive"
align = 1
[connection signal="about_to_show" from="." to="." method="_on_AboutDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_AboutDialog_popup_hide"]
[connection signal="pressed" from="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer/LinkButtons/Website" to="." method="_on_Website_pressed"]
[connection signal="pressed" from="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer/LinkButtons/GitHub" to="." method="_on_GitHub_pressed"]
[connection signal="pressed" from="AboutUI/IconsButtons/SloganAndLinks/VBoxContainer/LinkButtons/Donate" to="." method="_on_Donate_pressed"]
[connection signal="item_selected" from="AboutUI/Credits/Groups" to="." method="_on_Groups_item_selected"]
